--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   google_fonts: ^2.3.2
   flutter_screenutil: ^5.4.0+1
   introduction_screen: ^3.0.2
+  firebase_core: ^1.16.0
+  firebase_auth: ^3.3.17
+  cloud_firestore: ^3.1.14
+  google_sign_in: 5.3.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
