--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_core: ^1.16.0
   firebase_auth: ^3.3.17
   cloud_firestore: ^3.1.14
-  google_sign_in: 5.3.0
+  google_sign_in: ^5.3.0
   provider: ^6.0.2
   lottie: ^1.3.0
 
