--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^3.1.14
   google_sign_in: 5.3.0
   provider: ^6.0.2
+  flutter_inappwebview: any
 
 dev_dependencies:
   flutter_test:
