--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^5.3.0
   provider: ^6.0.2
   lottie: ^1.3.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
