--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   lottie: ^1.3.0
   flutter_inappwebview: ^5.4.3+4
 
+  flutter_native_splash: ^2.1.6
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/paw_logo.png
+
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +77,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/images/
+      
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -85,7 +92,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+
+    - family: Pacifico
+      fonts:
+        - asset: assets/google_fonts/Pacifico-Regular.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
