--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,14 +43,10 @@ dependencies:
   google_sign_in: ^5.3.0
   provider: ^6.0.2
   lottie: ^1.3.0
-
   fluttertoast: ^8.0.9
-
   flutter_inappwebview: ^5.4.3+4
-
-  
   flutter_native_splash: ^2.1.6
-
+  flutter_zoom_drawer: ^2.0.0 
 flutter_native_splash:
   color: "#ffffff"
   image: assets/images/paw_logo.png
