--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fluttertoast: ^8.0.9
   flutter_inappwebview: ^5.4.3+4
   flutter_native_splash: ^2.1.6
+  flutter_zoom_drawer: ^3.0.1
   
 flutter_native_splash:
   color: "#ffffff"
