--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,10 @@ dependencies:
   lottie: ^1.3.0
   fluttertoast: ^8.0.9
   flutter_inappwebview: ^5.4.3+4
-  flutter_native_splash: ^2.1.6
   flutter_zoom_drawer: ^3.0.1
   url_launcher: ^6.1.0
+  stacked: ^2.3.6
   
-flutter_native_splash:
-  color: "#ffffff"
-  image: assets/images/paw_logo.png
 
 
 
