--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   stacked: ^2.3.6
   stacked_hooks: ^0.2.2
   flutter_launcher_icons: ^0.9.2
+  dio: ^4.0.6
 
 flutter_icons:
   android: "launcher_icon"
