--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   stacked_hooks: ^0.2.2
   flutter_launcher_icons: ^0.9.2
   dio: ^4.0.6
+  cached_network_image: ^3.2.1
 
 flutter_icons:
   android: "launcher_icon"
