--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   dio: ^4.0.6
   cached_network_image: ^3.2.1
+  shared_preferences: ^2.0.15
 
 flutter_icons:
   android: "launcher_icon"
