--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   dio: ^4.0.6
   cached_network_image: ^3.2.1
   shared_preferences: ^2.0.15
+  carousel_slider: ^4.1.1
 
 flutter_icons:
   android: "launcher_icon"
