--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cached_network_image: ^3.2.1
   shared_preferences: ^2.0.15
   carousel_slider: ^4.1.1
+  flutter_circular_text: ^0.3.1
 
 flutter_icons:
   android: "launcher_icon"
