--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shared_preferences: ^2.0.15
   carousel_slider: ^4.1.1
   flutter_circular_text: ^0.3.1
+  google_mobile_ads: ^1.2.0
 
 flutter_icons:
   android: "launcher_icon"
